增加mybatis-generator与通用mapper

--- a/microservice-demo/eureka-server/src/main/resources/application.yml
+++ b/microservice-demo/eureka-server/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: eureka-server
   profiles:
-    active: security
+    active: default
 ---
 spring:
   profiles: default
