--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <encoding>UTF-8</encoding>
+
+        <org.mybatis.spring.boot.version>1.3.0</org.mybatis.spring.boot.version>
+        <com.github.pagehelper.version>5.0.1</com.github.pagehelper.version>
+        <com.github.jsqlparser.version>1.0</com.github.jsqlparser.version>
+        <mysql.connector.version>5.1.41</mysql.connector.version>
+        <tk.mybatis.version>3.4.0</tk.mybatis.version>
     </properties>
 
     <dependencyManagement>
