--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ hs_err_pid*
 .idea/
 /microservice-demo/eureka-server/eureka-server.iml
 /microservice-demo/microservice-demo.iml
+/microservice-demo/provider-service/provider-service.iml
