--- a/microservice-demo/provider-service/src/main/resources/application.yml
+++ b/microservice-demo/provider-service/src/main/resources/application.yml
@@ -1,9 +1,31 @@
 spring:
   application:
     name: provider-service
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://192.168.100.3:3306/test?serverTimezone=UTC&characterEncoding=utf-8
+    username: root
+    password: password
+    hikari:
+      max-lifetime: 1765000 #一个连接的生命时长（毫秒），超时而且没被使用则被释放（retired），缺省:30分钟，建议设置比数据库超时时长少30秒以上
+      maximum-pool-size: 15 #连接池中允许的最大连接数。缺省值：10；推荐的公式：((core_count * 2) + effective_spindle_count)
 server:
   port: 8081
 eureka:
   client:
     serviceUrl:
       defaultZone: http://discovery:8761/eureka/
+
+#mybatis:
+#    type-aliases-package: com.robust.entity
+#mapper:
+#    mappers:
+#        - com.robust.util.BaseMapper
+#    not-empty: false
+#    identity: MYSQL
+#
+#pagehelper:
+#    helperDialect: mysql
+#    reasonable: true
+#    supportMethodsArguments: true
+#    params: count=countSql
