--- a/microservice-demo/pom.xml
+++ b/microservice-demo/pom.xml
@@ -9,7 +9,10 @@
     <modules>
         <module>eureka-server</module>
 		<module>provider-service</module>
-	</modules>
+        <module>provider-service-h2</module>
+		<module>consumer-movie</module>
+        <module>consumer-movie-feign</module>
+    </modules>
     <packaging>pom</packaging>
 
 	<name>microservices-demo</name>
