--- a/microservice-demo/provider-service/src/main/resources/application.yml
+++ b/microservice-demo/provider-service/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: provider-service
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://192.168.100.3:3306/test?serverTimezone=UTC&characterEncoding=utf-8
+    url: jdbc:mysql://192.168.100.3:3306/test?serverTimezone=UTC&useSSL=false&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false&maxReconnects=10
     username: root
     password: password
     hikari:
@@ -15,7 +15,10 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://discovery:8761/eureka/
-
+logging:
+  level:
+    root: INFO
+    com.robust: DEBUG
 #mybatis:
 #    type-aliases-package: com.robust.entity
 #mapper:
