--- a/microservice-demo/consumer-feign-ribbon-customing/src/main/resources/application.yml
+++ b/microservice-demo/consumer-feign-ribbon-customing/src/main/resources/application.yml
@@ -14,3 +14,7 @@ logging:
 feign:
   hystrix:
     enabled: true
+#此处通过配置文件设置负载均衡策略，与通过RibbonConfiguration设置的结果一致，详见官方文档 http://cloud.spring.io/spring-cloud-static/Dalston.SR1/#_customizing_the_ribbon_client
+provider-service:
+  ribbon:
+    NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule
