--- a/microservice-demo/pom.xml
+++ b/microservice-demo/pom.xml
@@ -11,9 +11,15 @@
 		<module>provider-service</module>
         <module>provider-service-h2</module>
 		<module>consumer-movie</module>
-        <module>consumer-movie-feign</module>
+        <module>consumer-feign</module>
 		<module>consumer-feign-ribbon-customing</module>
-	</modules>
+		<module>hystrix-dashboard</module>
+		<module>turbine</module>
+		<module>turbine-mq</module>
+		<module>consumer-feign-mq</module>
+		<module>gateway-zuul</module>
+        <module>config-server</module>
+    </modules>
     <packaging>pom</packaging>
 
 	<name>microservices-demo</name>
